# wikijscmd

./: .gitignore  README.md  commands.py  config.py  custom_requests.py  graphql_queries.py  graphql_requests.py  journal.py  main.py  ncurses.py  pyproject.toml  setup.cfg  util.py
wikijscmd/: __init__.py  __main__.py  app.py  cli.py  commands.py  config.py  custom_requests.py  graphql_queries.py  ncurses.py  tui.py  util.py
