[tool.poetry]
name = "wikijscmd"
version = "0.1.0"
description = "A command line interface (CLI) for wiki.js"
authors = ["Mark Powers <mark@marks.kitchen>"]
license = "GPL 3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
