[metadata]
name = wikijscmd-markpowers
version = 0.0.1
author = Mark Powers
author_email = author@example.com
description = A command line interface client for wiki.js
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mark-Powers/wikijscmd
project_urls =
    Bug Tracker = https://github.com/Mark-Powers/wikijscmd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = wikijscmd
packages = find:
python_requires = >=3.6

[options.packages.find]
where=wikijscmd

[entry_points]
console_scripts =
    wikijscmd = wikijscmd.cli:cli()
